src/ty/snapshots/tvm__ty__tests__bad_extern_fn_call_dyn.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        extern fn print(v: dynamic);\n\n        print();\n    \"#)"
---
error: expected 1 param, got 0
3 |  print();
  |  ^^^^^


